@@ -2,6 +2,10 @@ Revelation changelog
 
 ---------------[ xxxx-xx-xx : 0.4.1 ]---------------
 
+2005-03-16  Erik Grinaker <erikg@codepoet.no>
+
+	* make io.file_monitor() handle NotSupportedError from gnome-vfs
+
 2005-02-09  Erik Grinaker <erikg@codepoet.no>
 
 	* make undo actually for for edit actions
